static/styles.css
:root {
	--primary-color: #8327ce;
	--secondary-color: #191919;
	--accent-color: #ae5bbe;
	--text-color: #050316;
	--text-color-alt: #616161;
	--text-background-color: rgba(251, 251, 251, 0.9);
	--text-background-color-alt: rgba(0, 0, 0, 0.05);
	--background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("/static/img/wallpaper.webp");
}

:root.dark {
	--primary-color: #6c3894;
	--accent-color: #e48af5;
	--text-color: #f5f5f5;
	--text-color-alt: #adadad;
	--text-background-color: rgba(30, 30, 30, 0.9);
	--text-background-color-alt: rgba(255, 255, 255, 0.05);
	--background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/img/wallpaper.webp");
}

* {
    box-sizing: border-box;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-Light.ttf') format('truetype');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-LightItalic.ttf') format('truetype');
    font-weight: 300;
    font-style: italic;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-Italic.ttf') format('truetype');
    font-weight: 400;
    font-style: italic;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: "Roboto";
    src: url('/static/fonts/Roboto-BoldItalic.ttf') format('truetype');
    font-weight: 700;
    font-style: italic;
}

html {
    font-family: "Roboto", "Arial", sans-serif;
}

body {
    margin: 0;
    padding: 0;
    height: 100vh;
    max-height: 100vh;
    display: flex;
    flex-direction: column;
    background-image: var(--background-image);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

h1 {
    font-size: 2.4em;
    font-weight: bold;
    line-height: 1.2em;
    margin: 0;
    padding: 20px 0;
    text-align: left;
    width: 100%;
}

h2 {
    font-size: 1.6em;
    font-weight: lighter;
    line-height: 1.2em;
    margin: 0;
    padding: 20px 0;
    text-align: left;
    width: 100%;
}

p {
    margin: 1em 0;
}

ul {
    margin: 0;
}

li {
    margin: 0.5em;
}

a {
    text-decoration: none;
    color: var(--accent-color);
}

a:hover {
    filter: brightness(1.3);
}

blockquote {
	margin: 0 1em;
	border-left: 4px solid var(--primary-color);
	padding: 10px 20px;
	color: var(--text-color-alt);
    background-color: var(--text-background-color-alt);
    font-style: italic;
}

blockquote p {
    margin: 0;
}

iframe {
    width: 60%;
    aspect-ratio: 16 / 9;
}

.main-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 1 1 auto;
    max-width: 50%;
    height: 100%;
    width: 100%;
    margin: auto;
    padding: 40px;
    background-color: var(--text-background-color);
    color: var(--text-color);
    overflow-y: auto;
    overflow-x: hidden;
}

.main-content img {
	max-width: 75%;
    display: block;
    margin: 1em auto;
}

.top-bar {
    flex: 0 0 64px;
    width: 100%;
    background-color: var(--primary-color);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 99;
}

.header {
    color: white;
    height: 100%;
    width: 100%;
    max-height: 64px;
    max-width: 50%;
    justify-content: space-between;
    display: flex;
    align-items: center;
    padding: 0 2vw;
}

.header a {
    color: white;
}

.header a:hover {
    text-shadow: 0 0 1px white, 0 0 1px white;
}

nav {
    display: flex;
    align-items: center;
    flex-grow: 1;
    width: 100%;
    max-width: 300px;
    margin-left: 20px;
    justify-content: space-between;
}

nav > * {
    padding: 6px;
}

.home {
    display: flex;
    width: 100%;
    max-width: 20vw;
}

.footer {
    flex: 0 0 32px;
    width: 100%;
    background-color: var(--secondary-color);
    color: #fff;
    z-index: 10;
    display: flex;
    justify-content: right;
    align-items: center;
    padding: 0 30px;
}

.footer-left {
    flex: 1 0;
}

.footer-center {
    flex: 1 0;
    text-align: center;
    white-space: nowrap;
}

.footer-right {
    flex: 1 1;
    display: flex;
    justify-content: flex-end;
    white-space: nowrap;
    gap: 20px;
}

.footer-right a:hover {
    filter: none;
}

.socials {
    color: #ffffff;
    vertical-align: middle;
    font-style: normal;
}

.logo-socials {
    width: 20px;
    height: 20px;
    display: inline-block;
    vertical-align: middle;
    fill: currentColor;
}

.footnote {
    margin-top: auto;
    text-align: right;
    width: 100%;
}

#twitter-link:hover { color: rgb(66, 180, 255); }
#youtube-link:hover { color: rgb(255, 0, 0); }
#twitch-link:hover  { color: rgb(168, 113, 248); }

.dark-mode-button {
	color: white;
	background-color: #371d49;
    border: none;
    padding: 10px 1vw;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    border-radius: 12px;
}

.dark-mode-button:hover {
    background-color: #000000;
}

.dark-mode-button.dark {
	color: black;
    background-color: #ffffff;
}

.DotAnim {
    animation-name: DotAnim;
    animation-duration: 1.8s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

@keyframes DotAnim {
    0%   { color: var(--text-color); }
    100% { color: var(--text-background-color); }
}

@media screen and (max-aspect-ratio: 1/1) {
    .back-button {
        margin: 0;
    }
    .header {
        padding: 0 5vw;
        max-width: 100%;
    }
    iframe {
        width: 80%;
    }
    .main-content {
        max-width: 100vw;
        padding: 90px 5% 40px;
    }
    .okayu-footer {
        display: none;
    }
}

